Thu Feb 18 22:28:09 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* processor.rb: Processor#update_statusにバグがあった

Thu Feb 18 21:09:13 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* ntask.rb, njob.rb, n-single-exportable.rbn-group-by.rb, port.rb:
	  [REQ#206]対応 その1
	* fiber-mon.rb: monitor.rb を利用するようにした.
	
Tue Feb 16 23:27:55 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* processor.rb, ntask.rb, njob.rb: [REQ#208] 対応
	* fiber-mon.rb: FiberMon#syncronize追加
	* n-group-by.rb, port.rb: fiber-mon.rbの変更に対応

Tue Feb 16 17:51:59 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* processor.rb, njob.rb, n-single-exportable.rb, n-group-by.rb,
	  port.rb, fiber-mon.rb: [REQ#206] 完成

Wed Feb 10 20:32:47 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* port.rb: [REQ#207] 文字列を続けて転送するときにまとめて大きな文
	  字列として転送するようにした.

Tue Feb  9 14:05:36 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* base-app.rb, node.rb: BaseApp.start_subcommand2追加,

Tue Feb  9 13:52:11 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* fiber-mon.rb: fiber-controller.rb から改名
	* base-app.rb: forkした後, 不必要なファイルディスクリプタをクローズ

Mon Feb  8 12:45:40 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* dev(0.5.4-045-REQ205-commit04)からのマージ


Mon Feb  8 00:09:53 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* controller.rb: [REQ#205]assign_input_processor_nでnodeの検索に問
	  題があった

Sun Feb  7 22:53:17 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* conf.rb, fairy.conf:
	  CONF.CONTROLLER_MAX_ACTIVE_NTASKS_IN_PROCESSOR のデフォルトパラ
	  メータ値を調整した.

Sun Feb  7 20:23:40 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* b-group-by.rb: デバックログ追加
	* controller.rb: [REQ#205]対応で問題があった.

Sat Feb  6 01:19:27 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* controller.rb, n-group-by.rb, n-single-exportable.rb, njob.rb:
	  [REQ#206]対応その1
	* fiber-controller.rb: 追加


Fri Feb  5 21:18:26 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.conf: [REQ#205]対応忘れ.

Fri Feb  5 21:10:18 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>
