@@ -53,8 +53,8 @@ CONF.CONTROLLER_MAX_ACTIVE_NTASKS_IN_PROCESSOR = 4
 
 ##CONF.PREQUEUING_POLICY = {:queuing_class => :OnMemoryQueue}
 #  CONF.PREQUEUING_POLICY = {:queuing_class => :PoolQueue}
-# CONF.PREQUEUING_POLICY = {:queuing_class => :ChunkedPoolQueue}
-  CONF.PREQUEUING_POLICY = {:queuing_class => :ChunkedSizedPoolQueue}
+ CONF.PREQUEUING_POLICY = {:queuing_class => :ChunkedPoolQueue}
+#  CONF.PREQUEUING_POLICY = {:queuing_class => :ChunkedSizedPoolQueue}
 #  CONF.PREQUEUING_POLICY = {:queuing_class => :FileBufferdQueue}
 ##CONF.POSTQUEUING_POLICY = {:queuing_class => :OnMemoryQueue}
 #  CONF.POSTQUEUING_POLICY = {:queuing_class => :OnMemoryQueue}
