@@ -1,3 +1,9 @@
+Fri Feb 19 16:10:40 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* port.rb: ChunkedPoolQueue だけ対応
+	* fiber-mon.rb: FiberMon::Monitor 追加
+
+
 Thu Feb 18 22:28:09 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* processor.rb: Processor#update_statusにバグがあった
